# go-typst

./: .gitignore  Makefile  README.md  go.mod  typst.go  typst_bench_test.go  typst_test.go
internal/customfont_test/: customfont_test.go
testdata/: custom_font.typ  huge_table.typ  large_table.typ  sample.typ  with_image.typ  with_import.typ  with_package.typ
typst-ffi/: Cargo.toml  typst_ffi.h
typst-ffi/src/: lib.rs
