[package]
name = "typst-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
typst = "0.14"
typst-pdf = "0.14"
typst-assets = { version = "0.14", features = ["fonts"] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
